added Find functionality for User and Role

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -29,6 +29,7 @@ default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 
+
 default.home.label=Home
 default.list.label={0} List
 default.add.label=Add {0}
@@ -39,6 +40,7 @@ default.show.label=Show {0}
 default.edit.label=Edit {0}
 
 default.button.create.label=Create
+default.button.find.label=Find
 default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
